Modified MVC, config and db files

--- a/app/views/hello/index.html.erb
+++ b/app/views/hello/index.html.erb
@@ -1,6 +1,11 @@
-First message
-<br />
-<% @message %>
-Second Message
-<%= @message %>
-<br />
+<% if @message.length > 23 %>
+	<%= message %>
+<% end %>
+
+The sum of <%= @first %> and <%= @second %> is <%= @sum %>
+
+That's <%= @sum.even? 'even' : 'odd' %>
+
+<% 1.upto(@sum + 1).each.do |num| %>
+	<p> <%= num %> </p>
+<% end %>
